# FEOTS

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  cloudbuild.yaml  configure  configure.ac  index.md
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
codelabs/feots-on-google-cloud/: codelab.json  index.html
doc/: FEOTS-UsersGuide.tex  references.bib  softwaremanual.cls  workflow.eps
docs/: 1
docs/source/: conf.py  feots-database.rst  feots-workflow.rst  getting-started.rst  help.rst  index.rst  license.rst
examples/POP03T_OperatorDiagnosis/: README  runtime.params
examples/agulhas/: FEOTSInitialize.f90  GenMask.f90  feots_integrate.slurm  feots_regionalextraction.slurm  feotsnodes  makefile  runtime.params  watermass.config
examples/atlantic_dye/: FEOTSInitialize.f90  feots_integrate.slurm  feots_regionalextraction.slurm  feotsnodes  makefile  runtime.params
examples/atlantic_dye_layer/: FEOTSInitialize.f90  feots_extractoceanstate.slurm  feots_integrate.slurm  feotsnodes  runtime.params  watermass.config
examples/e3smv0-1davg-hilat-operator-diagnosis/: README.md
examples/e3smv0-hilat-operator-diagnosis/: FEOTSInitialize.f90  IRFs.txt  README.md  feots.slurm  impulse.slurm  makefile  mkdb.sh  operator-diagnosis.slurm  runtime.params
examples/gen_impulse/: README.md
examples/global_constant_preservation/: FEOTSInitialize.f90  README.md  makefile
examples/global_dye/: IRFList_5dayAvg.txt  feots_diagnosis.slurm  feotsnodes  makefile  runtime.params
examples/global_radionuclide/: FEOTSInitialize.f90  feots_integrate.slurm  feotsnodes  runtime.params
examples/gulfstream_dye/: FEOTSInitialize.f90  FEOTS_Settings.gcp  GenMask.f90  feots.slurm  feots_integrate.slurm  runtime.params  test.slurm  timing.txt
examples/regional_constant_preservation/: FEOTSInitialize.f90  GenMask.f90  README.md  VolumeZProfile.py  feots.slurm  feotsPostProcess.py  makefile  plotCurve.py  pre-process.slurm  process_files.sh  runtime.params  zProfile.py
examples/zapiola/: IRFs.txt  (+11 more)
scripts/: feots_compare.py  mkdb.sh  requirements.txt
src/: BinaryIO.F90  CRSMatrix_Class.F90  CommonRoutines.F90  CommonRoutines.f90  ConstantsDictionary.F90  FEOTS.F90  FEOTS.f90  FEOTS_CLI_Class.F90  FEOTS_Driver_Routines.F90  FEOTS_Macros.h  Makefile.am  Makefile.in  ModelPrecision.F90  POP_AdjacencyGraph_Class.F90  POP_FEOTS_Class.F90  POP_FEOTS_Class.f90  POP_Mesh_Class.F90  POP_Native_Class.F90  POP_Params_Class.F90  POP_Regional_Class.F90  POP_Stencil_Class.f90  TracerStorage_Class.F90  runtime.params
src/POP/: POP_AdjacencyGraph_Class.f90  POP_FEOTS_Class.f90  POP_GridTypeMappings.f90  POP_Mesh_Class.f90  POP_Native_Class.f90  POP_Params_Class.f90  POP_Regional_Class.f90  POP_Stencil_Class.f90
src/POP/programs/: ExtractOceanState.f90  FEOTSDriver.f90  FEOTSInitialize.f90  GenMask.f90  GenerateMeshOnlyFile.f90  GreedyGraphColoring.f90  OperatorDiagnosis.f90  RegionalExtraction.f90
src/common/: BinaryIO.f90  CommonRoutines.f90  ConstantsDictionary.f90  ModelPrecision.f90  POP_Mesh_Class.f90
src/matrices/: CRSMatrix_Class.f90
src/programs/: ExtractOceanState.f90  GenMask.f90  GenerateMeshOnlyFile.f90  GreedyGraphColoring.f90
src/solutionstorage/: TracerStorage_Class.f90
(+66 files in other folders)
